Fixed sizes and spacing

--- a/styles.css
+++ b/styles.css
@@ -27,8 +27,6 @@ body {
 div {
     margin-top: 0%;
     margin-bottom: 0%;
-    transform: translateY(0.05%);
-    transition: all 1s;
 }
 
 .div-header {
@@ -46,34 +44,6 @@ div {
 
 }
 
-.small-unhighlighted {
-    color: #FFF8C7;
-    font-size: small;
-    display: inline;
-    margin-top: 0.5cm;
-    margin-bottom: 0.5cm;
-}
-
-.small-highlighted {
-    color: #11142C;
-    font-size: small;
-    background-color: #FFF8C7;
-    display: inline;
-    margin-top: 0.5cm;
-    margin-bottom: 0.5cm;
-    border-radius: 4px;
-}
-
-.medium-highlighted {
-    color: #11142C;
-    font-size: x-large;
-    background-color: #FFF8C7;
-    display: inline;
-    margin-top: 0.5cm;
-    margin-bottom: 0.5cm;
-    border-radius: 4px;
-}
-
 .big-highlighted {
     color: #11142C;
     font-size: xx-large;
@@ -82,6 +52,30 @@ div {
     margin-top: 1cm;
     margin-bottom: 1cm;
     border-radius: 4px;
+    padding: 2px;
+}
+
+.medium-highlighted {
+    color: #11142C;
+    font-size: large;
+    background-color: #FFF8C7;
+    display: inline;
+    margin-top: 0.5cm;
+    margin-bottom: 0.5cm;
+    border-radius: 4px;
+    padding: 2px;
+}
+
+.small-highlighted {
+    color: #11142C;
+    font-size: 10;
+    background-color: #FFF8C7;
+    display: inline;
+    margin-top: 0.5cm;
+    margin-bottom: 0.5cm;
+    border-radius: 4px;
+    padding: 2px;
+    line-height: 25px;
 }
 
 .big-unhighlighted {
@@ -99,21 +93,38 @@ div {
 
 .medium-unhighlighted-yellow {
     color: #FFF8C7;
-    font-size: x-large;
+    font-size: large;
+}
+
+.small-unhighlighted {
+    color: #FFF8C7;
+    font-size: 10;
+    display: inline;
+    margin-top: 0.5cm;
+    margin-bottom: 0.5cm;
+}
+
+.paragraph {
+    color: #FFF8C7;
+    font-size: 10;
+    margin-top: 0.5cm;
+    margin-bottom: 0.5cm;
+    text-align: justify;
 }
 
 /* Create three unequal columns that floats next to each other */
+
 .column {
     float: left;
-    align-items: center;
     padding-left: 3%;
     padding-right: 3%;
+    margin: auto;
+
 }
 
 .left {
-    width: 23.5%;
-    text-align: center;
-    padding-top: 1%;
+    width: 24%;
+    text-align: right;
 }
 
 .middle {
@@ -123,7 +134,6 @@ div {
 .right {
     width: 47%;
     text-align: left;
-    padding-top: 2%;
 }
 
 /* Clear floats after the columns */
@@ -135,33 +145,6 @@ div {
 
 .key-highlights {
     vertical-align: middle;
-}
-
-/* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 700px) {
-    .column {
-        width: 100%;
-        text-align: center;
-    }
-
-    .two-columns {
-        width: 100%;
-        text-align: center;
-    }
-
-    .follow-the-line {
-        border-right: 1px solid #FFF8C7;
-        width: 50%;
-        height: 300px;
-    }
-
-    .short-follow-the-line {
-        border-right: 1px solid #FFF8C7;
-        width: 20%;
-        height: 100px;
-
-    }
-
 }
 
 .highlight-images {
@@ -193,22 +176,67 @@ div {
     cursor: pointer;
     display: inline-block;
     border-radius: 4px;
+    margin: 10px;
+    width: 250px;
 }
 
 .get-in-touch-button:hover {
     background: #574F84;
+    color: #FFF8C7;
 }
 
 .up-to-button {
     border: none;
     background-color: #574F84;
-    padding: 14px 80px;
+    padding: 14px 60px;
     font-size: 16px;
     cursor: pointer;
     display: inline-block;
     border-radius: 4px;
+    margin: 10px;
+    width: 250px;
+    text-align: center;
+    color:#FFF8C7;
 }
 
 .up-to-button:hover {
     background: #FFF8C7;
+    color: #574F84;
+}
+
+.pad {
+    height: 50px;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 700px) {
+    .column {
+        width: 100%;
+        text-align: center;
+    }
+
+    .two-columns {
+        width: 100%;
+        text-align: center;
+    }
+
+    .follow-the-line {
+        border-right: 1px solid #FFF8C7;
+        width: 50%;
+        height: 300px;
+    }
+
+    .short-follow-the-line {
+        border-right: 1px solid #FFF8C7;
+        width: 50%;
+        height: 100px;
+        margin: 20px;
+    }
+
+    .footer {
+        text-align: center;
+        align-items: center;
+        width: 100%;
+    }
+
 }
